--- a/src/regression/makefile
+++ b/src/regression/makefile
@@ -1,9 +1,13 @@
 include ../common.mk
 
-OBJS=regression.o
+OBJS=regression.o regression_with_theta.o
+
 compile: $(OBJS)
 
 regression.o: regression.cpp regression.hpp
 	$(CC) $(CFLAGS) $(PREPROC) -o regression.o -c $<
+
+regression_with_theta.o: regression_with_theta.cpp regression_with_theta.hpp
+	$(CC) $(CFLAGS) $(PREPROC) -o regression_with_theta.o -c $<
 clean :
 	rm -f *.o
