--- a/src/regression/makefile
+++ b/src/regression/makefile
@@ -4,7 +4,7 @@ OBJS=regression.o
 
 compile: $(OBJS)
 
-regression.o: regression.cpp regression.hpp
+regression.o: regression.cpp regression.hpp cl_headers.h
 	$(CC) $(CFLAGS) $(PREPROC) -o regression.o -c $<
 
 regression_with_theta.o: regression_with_theta.cpp regression_with_theta.hpp
