Deleted reference to cl_headers.h

--- a/src/regression/makefile
+++ b/src/regression/makefile
@@ -5,7 +5,7 @@ OBJS=regression.o
 
 compile: $(OBJS)
 
-regression.o: regression.cpp regression.hpp cl_headers.h
+regression.o: regression.cpp regression.hpp
 	$(CC) $(CFLAGS) $(PREPROC) -o regression.o -c $<
 
 regression_with_theta.o: regression_with_theta.cpp regression_with_theta.hpp
