Moved makefiles to project subdirs

--- a/src/convex_clustering/makefile
+++ b/src/convex_clustering/makefile
@@ -1,14 +1,26 @@
+use_gpu=0
+
 include ../common.mk
 
-OBJS=cluster.o cluster_opencl.o
+OBJS=proxmap.o cluster.o cluster_opencl.o main.o
 BINDIR=../../bin
 
-compile: $(OBJS)
+CONVEXCLUSTER=$(BINDIR)/convexcluster
 
-cluster.o: cluster.cpp cluster.hpp ../cl_constants.h
+compile: $(OBJS)
+	$(LINKER) -o $(CONVEXCLUSTER) $(LINKFLAGS) $(OBJS)
+
+
+proxmap.o: ../proxmap.cpp ../proxmap.hpp
 	$(CC) $(CFLAGS) $(PREPROC) -c $<
 
-cluster_opencl.o: cluster_opencl.cpp cluster.hpp ../cl_constants.h
+main.o: main.cpp ../proxmap.hpp
+	$(CC) $(CFLAGS) $(PREPROC) -c $<
+
+cluster.o: cluster.cpp cluster.hpp
+	$(CC) $(CFLAGS) $(PREPROC) -c $<
+
+cluster_opencl.o: cluster_opencl.cpp cluster.hpp
 	$(CC) $(CFLAGS) $(PREPROC) -c $<
 
 distance: distance.cpp 
@@ -16,6 +28,9 @@ distance: distance.cpp
 
 knn_weights: knn_weights.cpp 
 	$(LINKER) -o $(BINDIR)/knn_weights $(LINK_FLAGS) $(C_FLAGS) $(PREPROC) $<
+
+project_hclust: project_hclust.cpp 
+	$(LINKER) -o $(BINDIR)/project_hclust $(LINK_FLAGS) $(C_FLAGS) $(PREPROC) $<
 
 clean :
 	rm -fr *.o $(PROGRAM) 
