Tested GPU and MPI functionality

--- a/src/regression/makefile
+++ b/src/regression/makefile
@@ -1,11 +1,12 @@
 use_mpi=1
+use_gpu=1
 
 include ../common.mk
 
 CFLAGS+=$(GCHEN_INC_FLAGS)
 LINKFLAGS+=$(GCHEN_LIB_FLAGS)
 
-OBJS=proxmap.o param_split.o quadratic.o block_descent.o main.o
+OBJS=proxmap.o param_split.o quadratic.o block_descent.o proxmap_opencl.o cl_templates.o main.o
 BINDIR=../../bin
 
 L0=$(BINDIR)/L0
@@ -15,6 +16,13 @@ compile: $(OBJS)
 
 proxmap.o: ../proxmap.cpp ../proxmap.hpp
 	$(CC) $(CFLAGS) $(PREPROC) -c $<
+
+proxmap_opencl.o: ../proxmap_opencl.cpp ../cl_templates.cpp ../cl_constants.h ../proxmap.hpp
+	$(CC) $(CFLAGS) $(PREPROC) -c $<
+
+cl_templates.o: ../cl_templates.cpp ../cl_templates.hpp ../cl_constants.h
+	$(CC) $(CFLAGS) $(PREPROC) -c $<
+
 
 main.o: main.cpp ../proxmap.hpp
 	$(CC) $(CFLAGS) $(PREPROC) -c $<
